--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,139 @@
-# Compiled class file
-*.class
+######################
+# React
+######################
+# dependencies
+node_modules/
+.pnp/
+.pnp.js
 
-# Log file
-*.log
+# testing
+/coverage/
 
-# BlueJ files
-*.ctxt
+# production
+/build/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Package Files #
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+######################
+# SASS
+######################
+.sass-cache/
+
+######################
+# Eclipse
+######################
+*.pydevproject
+.project
+.metadata
+tmp/
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+.factorypath
+
+# External tool builders
+.externalToolBuilders/**
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# STS-specific
+/.sts4-cache/*
+
+######################
+# IntelliJ
+######################
+.idea/
+*.iml
+*.iws
+*.ipr
+*.ids
+*.orig
+classes/
+out/
+
+######################
+# Visual Studio Code
+######################
+.vscode/
+
+######################
+# Maven
+######################
+log/
+target/
+
+######################
+# Package Files
+######################
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.db
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+######################
+# Windows
+######################
+# Windows image file caches
+Thumbs.db
 
-# Direnv
-.direnv/
+# Folder config file
+Desktop.ini
+
+######################
+# Mac OSX
+######################
+.DS_Store
+.svn
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+######################
+# Directories
+######################
+bin/
+deploy/
+.direnv
+
+######################
+# Logs
+######################
+*.log*
+
+######################
+# Others
+######################
+*.class
+*.*~
+*~
+.merge_file*
+
+######################
+# ESLint
+######################
+.eslintcache
